@@ -1214,6 +1214,7 @@ static void menunext(control m)
     pMUSTEXIST;
     pCHECK;
     if (pCURRENTPOS != (pNUMPLOTS - 1)) pMOVE(1);
+    PrintWarnings();
 }
 
 static void menuprev(control m)
@@ -1236,6 +1237,7 @@ static void menuprev(control m)
 	}
 	pMOVE((xd->needsave) ? 0 : -1);
     }
+    PrintWarnings();
 }
 
 static void menugrclear(control m)
